--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,19 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
+    android:gravity="top"
     android:orientation="vertical"
     android:padding="@dimen/screen_padding"
-    tools:context=".LoginActivity"
-    android:background="@color/white"
-    android:gravity="top">
+    tools:context=".LoginActivity">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
+        android:fontFamily="sans-serif-black"
+        android:text="@string/welcome_back"
+        android:textColor="@color/teal_700"
+        android:textSize="36sp" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:text="@string/please_enter_your_details_to_proceed"
         android:textColor="@color/teal_700"
         android:textSize="@dimen/normal_text_size" />
@@ -40,10 +48,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
+            android:backgroundTint="@color/black"
             android:ems="10"
+            android:hint="@string/enter_username_here"
             android:inputType="textEmailAddress"
-            android:textColor="@color/black"
-            android:backgroundTint="@color/black"/>
+            android:textColor="@color/black" />
 
     </LinearLayout>
 
@@ -69,10 +78,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
+            android:backgroundTint="@color/black"
             android:ems="10"
             android:inputType="textPassword"
-            android:textColor="@color/black"
-            android:backgroundTint="@color/black"/>
+            android:hint="@string/enter_password_here"
+            android:textColor="@color/black" />
 
     </LinearLayout>
 
@@ -80,17 +90,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/custom_button"
-        android:text="@string/login"
         android:foreground="?android:attr/selectableItemBackgroundBorderless"
+        android:text="@string/sign_in"
         android:textSize="@dimen/normal_text_size" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
+        android:layout_marginTop="@dimen/margin_vertical"
         android:layout_marginBottom="20dp"
-        android:orientation="horizontal"
-        android:layout_marginTop="@dimen/margin_vertical">
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
@@ -107,6 +117,7 @@
             android:layout_marginStart="@dimen/margin_horizontal"
             android:fontFamily="sans-serif-black"
             android:gravity="end"
+            android:padding="@dimen/btn_padding"
             android:text="@string/sign_up"
             android:textColor="@color/black" />
 
