--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -51,6 +50,7 @@
             android:layout_weight="2"
             android:backgroundTint="@color/black"
             android:ems="10"
+            android:hint="@string/enter_username_here"
             android:inputType="textEmailAddress"
             android:textColor="@color/black" />
 
@@ -80,6 +80,7 @@
             android:layout_weight="2"
             android:backgroundTint="@color/black"
             android:ems="10"
+            android:hint="@string/enter_password_here"
             android:inputType="textPassword"
             android:textColor="@color/black" />
 
@@ -121,8 +122,9 @@
             android:layout_marginStart="@dimen/margin_horizontal"
             android:fontFamily="sans-serif-black"
             android:gravity="end"
-            android:text="@string/login_here"
-            android:textColor="@color/black" />
+            android:text="@string/sign_in"
+            android:textColor="@color/black"
+            android:padding="@dimen/btn_padding"/>
 
     </LinearLayout>
 
