--- a/app/src/main/res/drawable/custom_button.xml
+++ b/app/src/main/res/drawable/custom_button.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="5dp" />
-    <solid android:color="@color/teal_700" />
+    <solid android:color="@color/blue" />
     <padding
         android:bottom="@dimen/btn_padding"
         android:left="@dimen/btn_padding"
