--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,80 +15,51 @@
         android:layout_marginTop="40dp"
         android:fontFamily="sans-serif-black"
         android:text="@string/welcome_back"
-        android:textColor="@color/teal_700"
+        android:textColor="@color/blue"
         android:textSize="36sp" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="@dimen/margin_horizontal"
         android:text="@string/please_enter_your_details_to_proceed"
-        android:textColor="@color/teal_700"
+        android:textColor="@color/blue"
         android:textSize="@dimen/normal_text_size" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_vertical"
-        android:orientation="horizontal"
-        android:padding="@dimen/btn_padding">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_weight="1"
-            android:text="@string/username"
-            android:textColor="@color/black"
-            android:textSize="@dimen/normal_text_size" />
+        android:layout_marginTop="20dp"
+        android:orientation="vertical">
 
         <EditText
-            android:id="@+id/etEmail"
-            android:layout_width="0dp"
+            android:id="@+id/et_username"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:backgroundTint="@color/black"
-            android:ems="10"
-            android:hint="@string/enter_username_here"
-            android:inputType="textEmailAddress"
+            android:layout_marginBottom="@dimen/margin_horizontal"
+            android:autofillHints="@string/enter_username_email_here"
+            android:hint="@string/enter_username_email_here"
+            android:inputType="text"
             android:textColor="@color/black" />
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
-        android:orientation="horizontal"
-        android:padding="@dimen/btn_padding">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_weight="1"
-            android:text="@string/password"
-            android:textColor="@color/black"
-            android:textSize="16sp" />
-
         <EditText
-            android:id="@+id/etPassword"
-            android:layout_width="0dp"
+            android:id="@+id/et_password"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:backgroundTint="@color/black"
-            android:ems="10"
-            android:inputType="textPassword"
+            android:layout_marginBottom="@dimen/margin_horizontal"
+            android:autofillHints="@string/enter_password_here"
             android:hint="@string/enter_password_here"
+            android:inputType="textPassword"
             android:textColor="@color/black" />
 
     </LinearLayout>
 
     <Button
+        android:id="@+id/btn_sign_in"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_vertical"
         android:background="@drawable/custom_button"
         android:foreground="?android:attr/selectableItemBackgroundBorderless"
         android:text="@string/sign_in"
