--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="40dp"
         android:fontFamily="sans-serif-black"
         android:text="@string/welcome"
-        android:textColor="@color/teal_700"
+        android:textColor="@color/blue"
         android:textSize="36sp" />
 
     <TextView
@@ -23,63 +23,41 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_vertical"
         android:text="@string/please_enter_your_details_to_create_an_account"
-        android:textColor="@color/teal_700"
+        android:textColor="@color/blue"
         android:textSize="@dimen/normal_text_size" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_vertical"
-        android:orientation="horizontal"
-        android:padding="@dimen/btn_padding">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_weight="1"
-            android:text="@string/username"
-            android:textColor="@color/black"
-            android:textSize="@dimen/normal_text_size" />
+        android:layout_marginTop="20dp"
+        android:orientation="vertical">
 
         <EditText
-            android:id="@+id/etEmail"
-            android:layout_width="0dp"
+            android:id="@+id/et_email"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:backgroundTint="@color/black"
-            android:ems="10"
-            android:hint="@string/enter_username_here"
+            android:layout_marginBottom="@dimen/margin_horizontal"
+            android:autofillHints="@string/enter_email_here"
+            android:hint="@string/enter_email_here"
             android:inputType="textEmailAddress"
             android:textColor="@color/black" />
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
-        android:orientation="horizontal"
-        android:padding="@dimen/btn_padding">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_weight="1"
-            android:text="@string/password"
-            android:textColor="@color/black"
-            android:textSize="16sp" />
+        <EditText
+            android:id="@+id/et_username"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/margin_horizontal"
+            android:autofillHints="@string/enter_username_here"
+            android:hint="@string/enter_username_here"
+            android:inputType="text"
+            android:textColor="@color/black" />
 
         <EditText
-            android:id="@+id/etPassword"
-            android:layout_width="0dp"
+            android:id="@+id/et_password"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:backgroundTint="@color/black"
-            android:ems="10"
+            android:layout_marginBottom="@dimen/margin_horizontal"
+            android:autofillHints="@string/enter_password_here"
             android:hint="@string/enter_password_here"
             android:inputType="textPassword"
             android:textColor="@color/black" />
@@ -92,7 +70,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginBottom="@dimen/margin_vertical"
+        android:layout_marginTop="@dimen/margin_vertical"
         android:background="@drawable/custom_button"
         android:foreground="?android:attr/selectableItemBackgroundBorderless"
         android:padding="@dimen/btn_padding"
@@ -104,7 +82,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="@dimen/margin_vertical"
         android:orientation="horizontal">
 
         <TextView
@@ -122,9 +100,9 @@
             android:layout_marginStart="@dimen/margin_horizontal"
             android:fontFamily="sans-serif-black"
             android:gravity="end"
+            android:padding="@dimen/btn_padding"
             android:text="@string/sign_in"
-            android:textColor="@color/black"
-            android:padding="@dimen/btn_padding"/>
+            android:textColor="@color/black" />
 
     </LinearLayout>
 
