--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -7,7 +7,7 @@
     android:gravity="top"
     android:orientation="vertical"
     android:padding="@dimen/screen_padding"
-    tools:context=".MainActivity">
+    tools:context=".SplashScreenActivity">
 
     <TextView
         android:layout_width="match_parent"
@@ -59,6 +59,16 @@
             android:layout_marginBottom="@dimen/margin_horizontal"
             android:autofillHints="@string/enter_password_here"
             android:hint="@string/enter_password_here"
+            android:inputType="textPassword"
+            android:textColor="@color/black" />
+
+        <EditText
+            android:id="@+id/et_confirm_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/margin_horizontal"
+            android:autofillHints="@string/enter_password_here"
+            android:hint="@string/confirm_password"
             android:inputType="textPassword"
             android:textColor="@color/black" />
 
