--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blue"
+    android:background="@drawable/home_background"
     android:orientation="vertical"
-    android:padding="@dimen/screen_padding"
+    android:paddingLeft="@dimen/screen_padding"
+    android:paddingRight="@dimen/screen_padding"
+    android:paddingTop="@dimen/screen_padding"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -93,8 +96,8 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/screen_padding"
-            android:layout_marginBottom="@dimen/margin_vertical">
+            android:layout_marginBottom="@dimen/margin_vertical"
+            android:padding="@dimen/screen_padding">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -125,20 +128,140 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/cv_abs_workout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="150dp"
+            android:layout_marginBottom="@dimen/margin_vertical"
+            app:cardCornerRadius="10dp">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/abs_workout"
+                android:contentDescription="@string/shirtless_man_training_abs_on_mat" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="@dimen/margin_vertical"
+                android:fontFamily="sans-serif-black"
                 android:text="@string/abs_workout"
                 android:textAllCaps="true"
-                android:textSize="@dimen/normal_text_size"
-                android:fontFamily="sans-serif-black"
-                android:textColor="@color/black"/>
-
+                android:textColor="@color/white"
+                android:textSize="@dimen/normal_text_size" />
 
         </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_chest_workout"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_marginBottom="@dimen/margin_vertical"
+            app:cardCornerRadius="10dp">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/chest_workout"
+                android:contentDescription="@string/muscular_man_doing_weight_lifting" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="@dimen/margin_vertical"
+                android:fontFamily="sans-serif-black"
+                android:text="@string/chest_workout"
+                android:textAllCaps="true"
+                android:textColor="@color/white"
+                android:textSize="@dimen/normal_text_size" />
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_legs_workout"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_marginBottom="@dimen/margin_vertical"
+            app:cardCornerRadius="10dp">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/legs_workout"
+                android:contentDescription="@string/sportsman_doing_squats_in_gym" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="@dimen/margin_vertical"
+                android:fontFamily="sans-serif-black"
+                android:text="@string/legs_workout"
+                android:textAllCaps="true"
+                android:textColor="@color/white"
+                android:textSize="@dimen/normal_text_size" />
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_shoulder_workout"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_marginBottom="@dimen/margin_vertical"
+            app:cardCornerRadius="10dp">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/shoulder_workout"
+                android:contentDescription="@string/strong_muscular_man_lifting_dumbbell" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="@dimen/margin_vertical"
+                android:fontFamily="sans-serif-black"
+                android:text="@string/shoulder_workout"
+                android:textAllCaps="true"
+                android:textColor="@color/white"
+                android:textSize="@dimen/normal_text_size" />
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_arms_workout"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_marginBottom="@dimen/margin_vertical"
+            app:cardCornerRadius="10dp">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/arm_workout"
+                android:contentDescription="@string/medium_shot_man_stretching_arm" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="@dimen/margin_vertical"
+                android:fontFamily="sans-serif-black"
+                android:text="@string/arms_workout"
+                android:textAllCaps="true"
+                android:textColor="@color/white"
+                android:textSize="@dimen/normal_text_size" />
+
+        </androidx.cardview.widget.CardView>
+
     </LinearLayout>
 
 </ScrollView>
