Updated UI of Main Activity and changed default app font

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -25,7 +25,6 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/open_sans_light"
         android:text="@string/welcome"
         android:textColor="@color/black"
         android:textSize="36sp"
@@ -40,8 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_vertical"
-        android:fontFamily="@font/open_sans_light"
-        android:text="@string/please_enter_your_details_to_create_an_account"
+        android:text="@string/set_up_your_account"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -113,7 +111,6 @@
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/margin_vertical"
         android:background="@drawable/custom_button"
-        android:fontFamily="@font/open_sans_light"
         android:foreground="?android:attr/selectableItemBackgroundBorderless"
         android:padding="@dimen/btn_padding"
         android:text="@string/sign_up"
@@ -130,7 +127,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_vertical"
-        android:fontFamily="@font/open_sans_light"
         android:text="@string/already_have_an_account"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
@@ -140,12 +136,11 @@
 
     <TextView
         android:id="@+id/tv_login_here"
-        android:layout_width="wrap_content"
+        android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_vertical"
-        android:fontFamily="@font/open_sans_light"
-        android:padding="@dimen/btn_padding"
         android:text="@string/sign_in"
+        android:gravity="center"
         android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textView3"
