--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,7 +26,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_vertical"
-        android:fontFamily="@font/open_sans_light"
         android:text="@string/welcome_back"
         android:textColor="@color/black"
         android:textSize="36sp"
@@ -40,8 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_vertical"
-        android:fontFamily="@font/open_sans_light"
-        android:text="@string/please_enter_your_details_to_proceed"
+        android:text="@string/login_to_your_account"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,7 +53,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_vertical"
         android:autofillHints="@string/enter_username_email_here"
-        android:fontFamily="@font/open_sans_light"
         android:hint="@string/enter_username_email_here"
         android:inputType="text"
         android:textColor="@color/black"
@@ -70,7 +67,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_vertical"
         android:autofillHints="@string/enter_password_here"
-        android:fontFamily="@font/open_sans_light"
         android:hint="@string/enter_password_here"
         android:inputType="textPassword"
         android:textColor="@color/black"
@@ -85,7 +81,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_vertical"
         android:background="@drawable/custom_button"
-        android:fontFamily="@font/open_sans_light"
         android:foreground="?android:attr/selectableItemBackgroundBorderless"
         android:text="@string/sign_in"
         android:textColor="@color/white"
@@ -101,7 +96,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_vertical"
-        android:fontFamily="@font/open_sans_light"
         android:text="@string/don_t_have_an_account"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
@@ -111,12 +105,10 @@
 
     <TextView
         android:id="@+id/tv_sign_up"
-        android:layout_width="wrap_content"
+        android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_vertical"
-        android:fontFamily="@font/open_sans_light"
-        android:gravity="end"
-        android:padding="@dimen/btn_padding"
+        android:gravity="center"
         android:text="@string/sign_up"
         android:textColor="@color/black"
         android:textStyle="bold"
